@@ -1,0 +1,6 @@
+#include "gqueue.h"
+
+void* gqueue_top(const struct gqueue* q)
+{
+  return (q->head == 0) ? 0 : q->head->data;
+}
