@@ -1,0 +1,6 @@
+#include "gstack.h"
+
+void* gstack_top(const struct gstack* s)
+{
+  return (s->head == 0) ? 0 : s->head->data;
+}
