@@ -1,6 +1,7 @@
 -------------------------------------------------------------------------------
 Changes in version 1.008
 
+- Added queue and stack ADT's.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
